--- a/index.html
+++ b/index.html
@@ -11,7 +11,52 @@
     <title>Consulting Services Presentation</title>
 </head>
 <body>
-    
+    <section class="container">
+        <div class="col-12">
+            <h1>Consulting Services</h1>
+        </div>
+        <div class="row">
+            <div class="col-md-4">
+                <div class="row">
+                    <div class="col-12">
+                        <h3>1.Design</h3>
+                        <p>
+                            Nec ullamcorper sit amet risus nullam eget. Vestibulum lorem sed risus ultricies tristique 
+                            nulla.
+                        </p>
+                    </div>
+                    <div class="col-12">
+                        <h3>2.Innovation</h3>
+                        <p>
+                            Nec ullamcorper sit amet risus nullam eget. Vestibulum lorem sed risus ultricies tristique 
+                            nulla.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-4">
+                <img class="décoimg" src="./images/fourniture-bureau.jpg" alt="fourniture_bureau">
+            </div>
+            <div class="col-md-4">
+                <div class="row">
+                    <div class="col-12 droite">
+                        <h3>3.Agile</h3>
+                        <p>
+                            Nec ullamcorper sit amet risus nullam eget. Vestibulum lorem sed risus ultricies tristique 
+                            nulla.
+                        </p>
+                    </div>
+                    <div class="col-12 droite">
+                        <h3>4.Research</h3>
+                        <p>
+                            Nec ullamcorper sit amet risus nullam eget. Vestibulum lorem sed risus ultricies tristique 
+                            nulla.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
